Remove test endpoints
