# book/src/main/resources/openapi.yaml
@@ -28,24 +28,6 @@ components:
           $ref: '#/components/schemas/BookStatus'
 
 paths:
-  /api/test:
-    get:
-      tags:
-        - Book
-      summary: Returns test message response
-      operationId: test
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                title: BookTestResponse
-                properties:
-                  message:
-                    type: string
-
   /api/books:
     get:
       tags:
